// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it should render all recipe fields when showDetails is true 1`] = `
<div
  className="pure-u-1 pure-u-md-1-3"
>
  <div
    className="recipe-card"
  >
    <div
      className="header"
    >
      <i
        className="far fa-star fa-2x"
      />
      <h3
        className="name"
      >
        Beans and rice
      </h3>
    </div>
    <img
      className="thumbnail"
    />
    <Time
      label="Cook time"
      value="5 minutes"
    />
    <Time
      label="Prep time"
      value="10 minutes"
    />
    <Time
      label="Total time"
      value="20 minutes"
    />
    <React.Fragment>
      <IngredientsList
        ingredients={
          Array [
            Object {
              "id": 1,
              "name": "1 can black beans",
            },
            Object {
              "id": 2,
              "name": "1 cup basmati rice",
            },
          ]
        }
      />
      <InstructionsList
        instructions={
          Array [
            Object {
              "id": "abc",
              "text": "microwave ingredients",
            },
            Object {
              "id": "def",
              "text": "eat food",
            },
          ]
        }
      />
    </React.Fragment>
  </div>
</div>
`;

exports[`it should render the main recipe fields 1`] = `
<div
  className="pure-u-1 pure-u-md-1-3"
>
  <div
    className="recipe-card"
  >
    <div
      className="header"
    >
      <i
        className="far fa-star fa-2x"
      />
      <h3
        className="name"
      >
        Beans and rice
      </h3>
    </div>
    <img
      className="thumbnail"
    />
    <Time
      label="Cook time"
      value="5 minutes"
    />
    <Time
      label="Prep time"
      value="10 minutes"
    />
    <Time
      label="Total time"
      value="20 minutes"
    />
  </div>
</div>
`;
